# miku-notes-gateway

./: .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs
src/: error.rs  main.rs  proto.rs  result.rs  types.rs
src/models/: auth.rs
src/routes/: auth.rs  files.rs  mod.rs  notes.rs  shelves.rs  tags.rs
src/routes/notes/: helpers.rs  mod.rs
src/routes/tests/: mod.rs  tags.rs
