[package]
name = "miku-notes-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["limit", "cors", "trace"] }
axum = { version = "0.7.5", features = ["multipart", "macros", "tracing"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3.36", features = ["local-offset"] }
async-stream = "0.3"
futures-util = "0.3.30"
mime_guess = "2.0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.11"
